--- a/stayfinder-frontend/package.json
+++ b/stayfinder-frontend/package.json
@@ -45,6 +45,7 @@
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^3.12.0",
     "next": "15.2.4",
@@ -54,6 +55,7 @@
     "react-dom": "^19",
     "react-hook-form": "latest",
     "react-hot-toast": "latest",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
