--- a/stayfinder-backend/package.json
+++ b/stayfinder-backend/package.json
@@ -2,10 +2,10 @@
   "name": "stayfinder-backend",
   "version": "1.0.0",
   "description": "Backend server for StayFinder application",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
